Rework add-reads into automatic module names
Signed-off-by: Maxim Nesen <maxim.nesen@oracle.com>